Kube-Test/Namespaces/IngressRules/first_ingress_rule.yaml
# -------------------------
# Mongo Express Deployment
# -------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myfirst-ingress
  namespace: web
spec:
  rules:
    - host: test.com
      http:
        paths:
          - backend:
              service:
                name: mongoexpress-service
                port:
                  number: 8081
            pathType: Prefix
            path: /
